--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 os: osx
 osx_image: xcode9.4
+language: csharp
 
 install:
   # CMake 3.7.2
@@ -7,29 +8,10 @@ install:
   - yes | hdiutil attach cmake-3.7.2-Darwin-x86_64.dmg
   - export PATH=/Volumes/cmake-3.7.2-Darwin-x86_64/CMake.app/Contents/bin:$PATH
 
-  # Java
-  - brew tap homebrew/cask-versions
-  - brew cask install java8
-  - export JAVA_HOME=`/usr/libexec/java_home -v 1.8`
-
-  # Android SDK
-  - mkdir android-sdk
-  - cd android-sdk
-  - curl -O https://dl.google.com/android/repository/sdk-tools-darwin-4333796.zip
-  - unzip -q sdk-tools-darwin-4333796.zip
-  - export PATH=$PWD/tools/bin:$PATH
-  - echo -y | sdkmanager 'platform-tools'
-  - echo -y | sdkmanager 'build-tools;28.0.1'
-  - echo -y | sdkmanager 'platforms;android-28'
-  - cd -
-
   # Android NDK
   - curl -O https://dl.google.com/android/repository/android-ndk-r13b-darwin-x86_64.zip
   - unzip -q android-ndk-r13b-darwin-x86_64.zip
   - export ANDROID_NDK_PATH=$PWD/android-ndk-r13b
-
-  # Nuget
-  - brew install nuget
 
 script:
   - ./build_android.sh
